syntax = "proto3";

package aperture.policy.sync.v1;

import "aperture/policy/language/v1/autoscale.proto";
import "aperture/policy/sync/v1/common_attributes.proto";

message PodScalerWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  policy.language.v1.PodScaler pod_scaler = 2;
}

message PodScalerDynamicConfigWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // PodScalerDynamicConfig is the dynamic configuration for the pod scaler.
  policy.language.v1.PodScaler.ScaleActuator.DynamicConfig pod_scaler_dynamic_config = 2;
}

message ScaleStatusWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  ScaleStatus scale_status = 2;
}

message ScaleStatus {
  int32 configured_replicas = 1;
  int32 actual_replicas = 2;
}

message ScaleDecisionWrapper {
  CommonAttributes common_attributes = 1;
  ScaleDecision scale_decision = 2;
}

message ScaleDecision {
  int32 desired_replicas = 1;
}
