syntax = "proto3";

package aperture.policy.sync.v1;

import "aperture/policy/language/v1/flowcontrol.proto";
import "aperture/policy/sync/v1/common_attributes.proto";

message RateLimiterWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Rate Limiter
  policy.language.v1.RateLimiter rate_limiter = 2;
}

message RateLimiterDecisionWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Rate Limiter Decision
  RateLimiterDecision rate_limiter_decision = 2;
}

message RateLimiterDecision {
  double limit = 1;
}

message LeakyBucketRateLimiterWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Rate Limiter
  policy.language.v1.LeakyBucketRateLimiter rate_limiter = 2;
}

message LeakyBucketRateLimiterDecisionWrapper {
  // CommonAttributes
  CommonAttributes common_attributes = 1;
  // Rate Limiter Decision
  LeakyBucketRateLimiterDecision rate_limiter_decision = 2;
}

message LeakyBucketRateLimiterDecision {
  double bucket_capacity = 1;
  double leak_amount = 2;
}
